Favicons / folder structure / names

--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ h1 {
 
 
 
-.james_bio_container {
+.p_container {
     background-color: #202020;
 }
 
 
-.james_bio {
+.p_bio {
     color: white;
     text-align: justify;
     font-size: 20px;
