--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+:root {
+    color-scheme: dark;
+}
 
 /* Font Awesome - Social media*/
 .fa {
@@ -58,7 +62,7 @@ h1 {
     color: white;
     text-align: justify;
     font-size: 20px;
-    font-family: courier;
+    font-family: 'Roboto', sans-serif;
     padding: 25px;
 }
 
